--- a/DependencyAnalyzer/DependencyAnalyzer.csproj
+++ b/DependencyAnalyzer/DependencyAnalyzer.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HTMLCollectionExtensions.js" />
     <Content Include="index.html" />
     <Content Include="script.js" />
     <Content Include="Web.config" />
