--- a/DependencyAnalyzer/DependencyAnalyzer.csproj
+++ b/DependencyAnalyzer/DependencyAnalyzer.csproj
@@ -70,6 +70,7 @@
     <Content Include="HTMLCollectionExtensions.js" />
     <Content Include="index.html" />
     <Content Include="script.js" />
+    <Content Include="table.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
